--- a/style.html
+++ b/style.html
@@ -6030,7 +6030,7 @@
             }
             #tabela-achados td.lf-actions {
                 flex-direction: column;
-                align-items: stretch;
+                align-items: flex-start;
             }
             #tabela-achados th:not(:last-child)::after,
             #tabela-achados td:not(:last-child)::after {
@@ -6046,8 +6046,14 @@
                 gap: 10px;
             }
             .lf-actions .btn {
-                flex: 1 1 160px;
+                flex: 0 0 auto;
+                width: auto;
+                min-width: 0;
+                min-height: 36px;
+                padding: 8px 12px;
+                font-size: 0.9rem;
                 justify-content: center;
+                align-self: flex-start;
             }
             .lf-table .chip {
                 align-self: flex-start;
