Ajusta botoes de acao dos achados

--- a/style.html
+++ b/style.html
@@ -6029,8 +6029,10 @@
                 min-width: 120px;
             }
             #tabela-achados td.lf-actions {
-                flex-direction: column;
-                align-items: flex-start;
+                flex-direction: row;
+                align-items: center;
+                justify-content: flex-start;
+                flex-wrap: wrap;
             }
             #tabela-achados th:not(:last-child)::after,
             #tabela-achados td:not(:last-child)::after {
