Adiciona assinatura institucional fixa no rodape

--- a/index.html
+++ b/index.html
@@ -1369,6 +1369,9 @@
             <span id="global-loading-text">Processando...</span>
         </div>
     </div>
+    <footer class="global-footer" aria-label="Assinatura institucional do Cosign">
+        <span id="global-footer-signature" class="footer-signature-text"></span>
+    </footer>
     <?!= include('script'); ?>
 
 </body>
